# stubborn-mcp

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: MCP.md
src/stubborn_mcp/: __init__.py  __main__.py  __version__.py  cli.py  server.py
src/stubborn_mcp/doctor/: __init__.py  checks.py  models.py  report.py  run.py
tests/: test_doctor.py  test_server.py
tests/fixtures/: minimal.json
