[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stubborn-mcp"
version = "0.1.0b2"
description = "MCP server for Stubborn — deterministic code and contract context"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Stubborn contributors" }]
keywords = ["mcp", "scip", "openapi", "cursor", "llm", "code-context", "stubborn"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "stubborn-stub>=0.9.0b5,<1.0",
    "mcp>=1.6,<2",
    "typer>=0.12,<1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9.0", "ruff>=0.9,<1"]

[project.scripts]
stubborn-mcp = "stubborn_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/stubborn-ai/stubborn-mcp"
Repository = "https://github.com/stubborn-ai/stubborn-mcp"
Documentation = "https://github.com/stubborn-ai/stubborn-mcp#readme"
Changelog = "https://github.com/stubborn-ai/stubborn/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/stubborn_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["F", "I"]
